优化版本兼容性